Add object array of references creation

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /Deserializer.class
 /ObjectReferenceClass.class
 /PrimitiveArrayClass.class
+/ObjectReferenceArrayCLass.class
+/ObjectReferenceArrayClass.class
