create and serialize collection of object references

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /PrimitiveArrayClass.class
 /ObjectReferenceArrayCLass.class
 /ObjectReferenceArrayClass.class
+/ObjectReferenceCollectionClass.class
